--- a/Pages/MainWindow.xaml
+++ b/Pages/MainWindow.xaml
@@ -1,16 +1,14 @@
 ﻿<Window x:Class="SpicetifyManager.Pages.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ui="http://schemas.modernwpf.com/2019" ui:WindowHelper.UseModernWindowStyle="True" mc:Ignorable="d"
-        Title="Spicetify Manager" ResizeMode="NoResize" Height="500" Width="870">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:ui="http://schemas.modernwpf.com/2019"
+        ui:WindowHelper.UseModernWindowStyle="True" mc:Ignorable="d" Title="Spicetify Manager" ResizeMode="NoResize" Height="500"
+        Width="870">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <ui:SimpleStackPanel x:Name="NavBar" Grid.Column="0" Orientation="Vertical" Width="170" Spacing="7"
-                             Background="#141414">
+        <ui:SimpleStackPanel x:Name="NavBar" Grid.Column="0" Orientation="Vertical" Width="170" Spacing="7" Background="#141414">
             <Button x:Name="ThemesBtn" Tag="Nav_ThemesBtn" Content="Themes" Click="ThemesBtn_Click"
                     Style="{StaticResource NavBtn}" Height="48" Width="170" Margin="0,7,0,0"/>
             <Button x:Name="PluginsBtn" Tag="Nav_PluginsBtn" Content="Plugins" Click="PluginsBtn_Click"
@@ -19,26 +17,25 @@
                     Style="{StaticResource NavBtn}" Height="48" Width="170"/>
             <Button x:Name="ManageBtn" Tag="Nav_ManageBtn" Content="Manage" Click="ManageBtn_Click"
                     Style="{StaticResource NavBtn}" Height="48" Width="170"/>
-            <Button x:Name="AboutBtn" Tag="Nav_AboutBtn" Content="About" Click="AboutBtn_Click"
-                    Style="{StaticResource NavBtn}" Height="48" Width="170"/>
-            <Button x:Name="LogsBtn" Tag="Nav_LogsBtn" Content="Logs" Click="LogsBtn_Click"
-                    Style="{StaticResource NavBtn}" Height="48" Width="170"/>
+            <Button x:Name="AboutBtn" Tag="Nav_AboutBtn" Content="About" Click="AboutBtn_Click" Style="{StaticResource NavBtn}"
+                    Height="48" Width="170"/>
+            <Button x:Name="LogsBtn" Tag="Nav_LogsBtn" Content="Logs" Click="LogsBtn_Click" Style="{StaticResource NavBtn}"
+                    Height="48" Width="170"/>
         </ui:SimpleStackPanel>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Frame Grid.Row="0" x:Name="ContentFrame" IsTabStop="True" NavigationUIVisibility="Hidden"
-                   Padding="14,0,25,0" Navigated="ContentFrame_OnNavigated"/>
+            <Frame Grid.Row="0" x:Name="ContentFrame" IsTabStop="True" NavigationUIVisibility="Hidden" Padding="14,0,25,0"
+                   Navigated="ContentFrame_OnNavigated"/>
             <Border Grid.Row="1" Padding="7">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <ui:SimpleStackPanel Grid.Column="0" VerticalAlignment="Bottom" Orientation="Horizontal"
-                                         Spacing="7">
+                    <ui:SimpleStackPanel Grid.Column="0" VerticalAlignment="Bottom" Orientation="Horizontal" Spacing="7">
                         <Button x:Name="ApplyBtn" Style="{StaticResource ButtonStyle}" Width="100" Content="Apply"
                                 Click="ApplyBtn_OnClick"/>
                         <Button x:Name="SaveBtn" Style="{StaticResource ButtonStyle}" Width="100" Content="Save"
@@ -50,8 +47,7 @@
                             <ui:DropDownButton.Flyout>
                                 <ui:MenuFlyout Placement="TopEdgeAlignedLeft">
                                     <MenuItem x:Name="ThemesFolder" Header="Themes Folder" Click="ThemesFolder_OnClick"/>
-                                    <MenuItem x:Name="PluginsFolder" Header="Extensions Folder"
-                                              Click="PluginsFolder_OnClick"/>
+                                    <MenuItem x:Name="PluginsFolder" Header="Extensions Folder" Click="PluginsFolder_OnClick"/>
                                     <MenuItem x:Name="CustomAppsFolder" Header="Custom Apps Folder"
                                               Click="CustomAppsFolder_OnClick"/>
                                     <MenuItem x:Name="ConfigFile" Header="Config File" Click="ConfigFile_OnClick"/>
@@ -59,8 +55,8 @@
                             </ui:DropDownButton.Flyout>
                         </ui:DropDownButton>
                     </ui:SimpleStackPanel>
-                    <Button Grid.Column="1" x:Name="ReloadBtn" Style="{StaticResource ButtonStyle}"
-                            HorizontalAlignment="Right" Height="32" Click="ReloadBtn_OnClick">
+                    <Button Grid.Column="1" x:Name="ReloadBtn" Style="{StaticResource ButtonStyle}" HorizontalAlignment="Right"
+                            Height="32" Click="ReloadBtn_OnClick">
                         <ui:FontIcon FontFamily="Segoe MDL2 Assets" FontSize="19" Glyph="&#xE72C;"/>
                     </Button>
                 </Grid>
