--- a/Pages/SettingsPage.xaml
+++ b/Pages/SettingsPage.xaml
@@ -1,5 +1,4 @@
-﻿<ui:Page x:Class="SpicetifyManager.Pages.SettingsPage"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ui:Page x:Class="SpicetifyManager.Pages.SettingsPage" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
          xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ui="http://schemas.modernwpf.com/2019"
@@ -10,6 +9,13 @@
             <Setter Property="FontSize" Value="17"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="Padding" Value="0,2,0,0"/>
+        </Style>
+        <Style BasedOn="{StaticResource TextBoxStyle}" TargetType="TextBox">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Padding" Value="7,0,0,0"/>
+            <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
     </Page.Resources>
     <ui:SimpleStackPanel>
@@ -34,12 +40,9 @@
                 <Label Grid.Column="0" Grid.Row="0" Content="Prefs Path: "/>
                 <Label Grid.Column="0" Grid.Row="1" Content="Spotify Path: "/>
                 <Label Grid.Column="0" Grid.Row="2" Content="Spotify Launch Flags: "/>
-                <TextBox x:Name="Prefs" Grid.Column="1" Grid.Row="0" Style="{StaticResource TextBoxStyle}" Background="{StaticResource BgDarkBrush}" BorderBrush="{StaticResource BorderBrush}"
-                         FontSize="14" Padding="7,0,0,0" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-                <TextBox x:Name="SpotifyPath" Grid.Column="1" Grid.Row="1" Style="{StaticResource TextBoxStyle}" Background="{StaticResource BgDarkBrush}" BorderBrush="{StaticResource BorderBrush}"
-                         FontSize="14" Padding="7,0,0,0" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-                <TextBox x:Name="LaunchFlags" Grid.Column="1" Grid.Row="2" Style="{StaticResource TextBoxStyle}" Background="{StaticResource BgDarkBrush}" BorderBrush="{StaticResource BorderBrush}"
-                         FontSize="14" Padding="7,0,0,0" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Grid.Column="1" Grid.Row="0" x:Name="Prefs" Background="{StaticResource BgDarkBrush}"/>
+                <TextBox Grid.Column="1" Grid.Row="1" x:Name="SpotifyPath" Background="{StaticResource BgDarkBrush}"/>
+                <TextBox Grid.Column="1" Grid.Row="2" x:Name="LaunchFlags" Background="{StaticResource BgDarkBrush}"/>
             </Grid>
             <Grid Grid.Row="1" Margin="0,25,0,0">
                 <Grid.RowDefinitions>
