--- a/Styles/CheckBox.xaml
+++ b/Styles/CheckBox.xaml
@@ -28,8 +28,7 @@
                         <StreamGeometry x:Key="CheckboxIndeterminate">M 15 5 L 15 15 L 5 15 L 5 5 Z</StreamGeometry>
                     </ControlTemplate.Resources>
                     <Border x:Name="RootGrid" Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
                             CornerRadius="{TemplateBinding ui:ControlHelper.CornerRadius}" SnapsToDevicePixels="True">
                         <Grid VerticalAlignment="Center">
                             <Grid.ColumnDefinitions>
@@ -37,24 +36,21 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Grid VerticalAlignment="Top">
-                                <Rectangle x:Name="NormalRectangle"
-                                           Fill="{DynamicResource CheckBoxCheckBackgroundFillUnchecked}"
+                                <Rectangle x:Name="NormalRectangle" Fill="{DynamicResource CheckBoxCheckBackgroundFillUnchecked}"
                                            Stroke="{DynamicResource CheckBoxCheckBackgroundStrokeUnchecked}"
                                            StrokeThickness="{DynamicResource CheckBoxBorderThemeThickness}"
                                            UseLayoutRounding="False" Height="20" Width="20"
                                            RadiusX="{TemplateBinding ui:ControlHelper.CornerRadius, Converter={StaticResource TopLeftCornerRadiusDoubleValueConverter}}"
                                            RadiusY="{TemplateBinding ui:ControlHelper.CornerRadius, Converter={StaticResource BottomRightCornerRadiusDoubleValueConverter}}"/>
-                                <ui:FontIconFallback x:Name="CheckGlyph"
-                                                     FontFamily="{DynamicResource SymbolThemeFontFamily}"
+                                <ui:FontIconFallback x:Name="CheckGlyph" FontFamily="{DynamicResource SymbolThemeFontFamily}"
                                                      Data="{StaticResource CheckMark}" FontSize="16"
                                                      Foreground="{DynamicResource CheckBoxCheckGlyphForegroundUnchecked}"
                                                      Opacity="0"/>
                             </Grid>
                             <ui:ContentPresenterEx x:Name="ContentPresenter" Margin="{TemplateBinding Padding}"
                                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                   VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                   Grid.Column="1" TextWrapping="Wrap" Focusable="False"
-                                                   RecognizesAccessKey="True"
+                                                   VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Grid.Column="1"
+                                                   TextWrapping="Wrap" Focusable="False" RecognizesAccessKey="True"
                                                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                         </Grid>
                     </Border>
@@ -172,10 +168,8 @@
                                     Value="{DynamicResource CheckBoxBackgroundCheckedPointerOver}"/>
                             <Setter TargetName="RootGrid" Property="BorderBrush"
                                     Value="{DynamicResource CheckBoxBorderBrushCheckedPointerOver}"/>
-                            <Setter TargetName="NormalRectangle" Property="Stroke"
-                                    Value="{StaticResource PrimarySolid}"/>
-                            <Setter TargetName="NormalRectangle" Property="Fill"
-                                    Value="{StaticResource SecondarySolid}"/>
+                            <Setter TargetName="NormalRectangle" Property="Stroke" Value="{StaticResource PrimarySolid}"/>
+                            <Setter TargetName="NormalRectangle" Property="Fill" Value="{StaticResource SecondarySolid}"/>
                             <Setter TargetName="CheckGlyph" Property="Foreground"
                                     Value="{DynamicResource CheckBoxCheckGlyphForegroundCheckedPointerOver}"/>
                             <Setter TargetName="CheckGlyph" Property="Opacity" Value="1"/>
@@ -192,8 +186,7 @@
                                     Value="{DynamicResource CheckBoxBackgroundCheckedPressed}"/>
                             <Setter TargetName="RootGrid" Property="BorderBrush"
                                     Value="{DynamicResource CheckBoxBorderBrushCheckedPressed}"/>
-                            <Setter TargetName="NormalRectangle" Property="Stroke"
-                                    Value="{StaticResource SecondarySolid}"/>
+                            <Setter TargetName="NormalRectangle" Property="Stroke" Value="{StaticResource SecondarySolid}"/>
                             <Setter TargetName="NormalRectangle" Property="Fill" Value="{StaticResource PrimarySolid}"/>
                             <Setter TargetName="CheckGlyph" Property="Foreground"
                                     Value="{DynamicResource CheckBoxCheckGlyphForegroundCheckedPressed}"/>
@@ -239,8 +232,7 @@
                                     Value="{DynamicResource CheckBoxCheckBackgroundFillIndeterminate}"/>
                             <Setter TargetName="CheckGlyph" Property="Foreground"
                                     Value="{DynamicResource CheckBoxCheckGlyphForegroundIndeterminate}"/>
-                            <Setter TargetName="CheckGlyph" Property="Data"
-                                    Value="{StaticResource CheckboxIndeterminate}"/>
+                            <Setter TargetName="CheckGlyph" Property="Data" Value="{StaticResource CheckboxIndeterminate}"/>
                             <Setter TargetName="CheckGlyph" Property="Opacity" Value="1"/>
                         </MultiTrigger>
                         <!-- IndeterminatePointerOver -->
@@ -261,8 +253,7 @@
                                     Value="{DynamicResource CheckBoxCheckBackgroundFillIndeterminatePointerOver}"/>
                             <Setter TargetName="CheckGlyph" Property="Foreground"
                                     Value="{DynamicResource CheckBoxCheckGlyphForegroundIndeterminatePointerOver}"/>
-                            <Setter TargetName="CheckGlyph" Property="Data"
-                                    Value="{StaticResource CheckboxIndeterminate}"/>
+                            <Setter TargetName="CheckGlyph" Property="Data" Value="{StaticResource CheckboxIndeterminate}"/>
                             <Setter TargetName="CheckGlyph" Property="Opacity" Value="1"/>
                         </MultiTrigger>
                         <!-- IndeterminatePressed -->
@@ -283,8 +274,7 @@
                                     Value="{DynamicResource CheckBoxCheckBackgroundFillIndeterminatePressed}"/>
                             <Setter TargetName="CheckGlyph" Property="Foreground"
                                     Value="{DynamicResource CheckBoxCheckGlyphForegroundIndeterminatePressed}"/>
-                            <Setter TargetName="CheckGlyph" Property="Data"
-                                    Value="{StaticResource CheckboxIndeterminate}"/>
+                            <Setter TargetName="CheckGlyph" Property="Data" Value="{StaticResource CheckboxIndeterminate}"/>
                             <Setter TargetName="CheckGlyph" Property="Opacity" Value="1"/>
                         </MultiTrigger>
                         <!-- IndeterminateDisabled -->
@@ -305,8 +295,7 @@
                                     Value="{DynamicResource CheckBoxCheckBackgroundFillIndeterminateDisabled}"/>
                             <Setter TargetName="CheckGlyph" Property="Foreground"
                                     Value="{DynamicResource CheckBoxCheckGlyphForegroundIndeterminateDisabled}"/>
-                            <Setter TargetName="CheckGlyph" Property="Data"
-                                    Value="{StaticResource CheckboxIndeterminate}"/>
+                            <Setter TargetName="CheckGlyph" Property="Data" Value="{StaticResource CheckboxIndeterminate}"/>
                             <Setter TargetName="CheckGlyph" Property="Opacity" Value="1"/>
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
