--- a/Styles/DropDownButton.xaml
+++ b/Styles/DropDownButton.xaml
@@ -28,8 +28,7 @@
                             CornerRadius="{TemplateBinding CornerRadius}" SnapsToDevicePixels="True">
 
                         <Border x:Name="InnerBorder" Padding="{TemplateBinding Padding}"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
+                                BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
                                 CornerRadius="{TemplateBinding CornerRadius}">
                             <Grid>
 
@@ -55,8 +54,7 @@
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="RootBorder" Property="Background"
-                                    Value="{StaticResource SecondarySolid}"/>
+                            <Setter TargetName="RootBorder" Property="Background" Value="{StaticResource SecondarySolid}"/>
                             <Setter TargetName="InnerBorder" Property="BorderBrush"
                                     Value="{DynamicResource ButtonBorderBrushPointerOver}"/>
                             <Setter TargetName="ContentPresenter" Property="TextElement.Foreground"
