--- a/Styles/ListView.xaml
+++ b/Styles/ListView.xaml
@@ -24,8 +24,7 @@
                         <StreamGeometry x:Key="CheckMark">M 17.939453 5.439453 L 7.5 15.888672 L 2.060547 10.439453 L 2.939453 9.560547 L 7.5 14.111328 L 17.060547 4.560547 Z</StreamGeometry>
                     </ControlTemplate.Resources>
                     <Border x:Name="ContentBorder" Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
                             CornerRadius="{TemplateBinding CornerRadius}" SnapsToDevicePixels="True">
                         <VisualStateManager.CustomVisualStateManager>
                             <ui:SimpleVisualStateManager/>
@@ -35,71 +34,57 @@
                                 <VisualStateGroup.Transitions>
                                     <VisualTransition From="MultiSelectDisabled" To="MultiSelectEnabled">
                                         <Storyboard>
-                                            <DoubleAnimationUsingKeyFrames
-                                                Storyboard.TargetName="MultiSelectCheckBoxTransform"
-                                                Storyboard.TargetProperty="X">
+                                            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectCheckBoxTransform"
+                                                                           Storyboard.TargetProperty="X">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:0" Value="-32"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0"
-                                                                      KeySpline="0.1,0.9,0.2,1"/>
+                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0" KeySpline="0.1,0.9,0.2,1"/>
                                             </DoubleAnimationUsingKeyFrames>
-                                            <DoubleAnimationUsingKeyFrames
-                                                Storyboard.TargetName="MultiSelectClipTransform"
-                                                Storyboard.TargetProperty="X">
+                                            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectClipTransform"
+                                                                           Storyboard.TargetProperty="X">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:0" Value="32"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0"
-                                                                      KeySpline="0.1,0.9,0.2,1"/>
+                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0" KeySpline="0.1,0.9,0.2,1"/>
                                             </DoubleAnimationUsingKeyFrames>
                                             <DoubleAnimationUsingKeyFrames
                                                 Storyboard.TargetName="ContentPresenterTranslateTransform"
                                                 Storyboard.TargetProperty="X">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:0" Value="-32"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0"
-                                                                      KeySpline="0.1,0.9,0.2,1"/>
+                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0" KeySpline="0.1,0.9,0.2,1"/>
                                             </DoubleAnimationUsingKeyFrames>
                                             <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectSquare"
                                                                            Storyboard.TargetProperty="Visibility">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                        Value="{x:Static Visibility.Visible}"/>
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}"/>
                                             </ObjectAnimationUsingKeyFrames>
                                             <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectCheck"
                                                                            Storyboard.TargetProperty="Visibility">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                        Value="{x:Static Visibility.Visible}"/>
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}"/>
                                             </ObjectAnimationUsingKeyFrames>
-                                            <ThicknessAnimationUsingKeyFrames
-                                                Storyboard.TargetName="ContentPresenterGrid"
-                                                Storyboard.TargetProperty="Margin">
+                                            <ThicknessAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenterGrid"
+                                                                              Storyboard.TargetProperty="Margin">
                                                 <DiscreteThicknessKeyFrame KeyTime="0" Value="32,0,0,0"/>
                                             </ThicknessAnimationUsingKeyFrames>
                                         </Storyboard>
                                     </VisualTransition>
                                     <VisualTransition From="MultiSelectEnabled" To="MultiSelectDisabled">
                                         <Storyboard>
-                                            <DoubleAnimationUsingKeyFrames
-                                                Storyboard.TargetName="MultiSelectCheckBoxTransform"
-                                                Storyboard.TargetProperty="X">
+                                            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectCheckBoxTransform"
+                                                                           Storyboard.TargetProperty="X">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:0" Value="0"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="-32"
-                                                                      KeySpline="0.1,0.9,0.2,1"/>
+                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="-32" KeySpline="0.1,0.9,0.2,1"/>
                                             </DoubleAnimationUsingKeyFrames>
-                                            <DoubleAnimationUsingKeyFrames
-                                                Storyboard.TargetName="MultiSelectClipTransform"
-                                                Storyboard.TargetProperty="X">
+                                            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectClipTransform"
+                                                                           Storyboard.TargetProperty="X">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:0" Value="0"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="32"
-                                                                      KeySpline="0.1,0.9,0.2,1"/>
+                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="32" KeySpline="0.1,0.9,0.2,1"/>
                                             </DoubleAnimationUsingKeyFrames>
                                             <DoubleAnimationUsingKeyFrames
                                                 Storyboard.TargetName="ContentPresenterTranslateTransform"
                                                 Storyboard.TargetProperty="X">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:0" Value="32"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0"
-                                                                      KeySpline="0.1,0.9,0.2,1"/>
+                                                <SplineDoubleKeyFrame KeyTime="0:0:0.333" Value="0" KeySpline="0.1,0.9,0.2,1"/>
                                             </DoubleAnimationUsingKeyFrames>
                                             <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectSquare"
                                                                            Storyboard.TargetProperty="Visibility">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                        Value="{x:Static Visibility.Visible}"/>
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}"/>
                                                 <DiscreteObjectKeyFrame KeyTime="0:0:0.333"
                                                                         Value="{x:Static Visibility.Collapsed}"/>
                                             </ObjectAnimationUsingKeyFrames>
@@ -159,9 +144,8 @@
                             </Grid>
                             <Border x:Name="MultiSelectSquare"
                                     BorderBrush="{DynamicResource SystemControlForegroundBaseMediumHighBrush}"
-                                    BorderThickness="1.8" Width="20" Height="20" Margin="12,0,0,0"
-                                    VerticalAlignment="Center" HorizontalAlignment="Left" Visibility="Collapsed"
-                                    CornerRadius="3">
+                                    BorderThickness="1.8" Width="20" Height="20" Margin="12,0,0,0" VerticalAlignment="Center"
+                                    HorizontalAlignment="Left" Visibility="Collapsed" CornerRadius="3">
                                 <Border.Clip>
                                     <RectangleGeometry Rect="0,0,20,20">
                                         <RectangleGeometry.Transform>
@@ -219,8 +203,7 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="MultiSelectCheck" Property="Opacity" Value="1"/>
                             <Setter TargetName="BorderBackground" Property="Opacity" Value="1"/>
-                            <Setter TargetName="BorderBackground" Property="Fill"
-                                    Value="{StaticResource SecondarySolid}"/>
+                            <Setter TargetName="BorderBackground" Property="Fill" Value="{StaticResource SecondarySolid}"/>
                             <Setter TargetName="ContentPresenter" Property="TextElement.Foreground"
                                     Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}"/>
                             <Setter TargetName="MultiSelectSquare" Property="BorderBrush"
@@ -261,8 +244,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="ui:ListView">
                     <Border BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="{TemplateBinding CornerRadius}" SnapsToDevicePixels="True">
+                            BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{TemplateBinding CornerRadius}"
+                            SnapsToDevicePixels="True">
                         <ui:ScrollViewerEx x:Name="ScrollViewer"
                                            KeyboardNavigation.TabNavigation="{TemplateBinding KeyboardNavigation.TabNavigation}"
                                            HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
