--- a/Pages/LogsPage.xaml
+++ b/Pages/LogsPage.xaml
@@ -1,16 +1,14 @@
 ﻿<ui:Page x:Class="SpicetifyManager.Pages.LogsPage" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ui="http://schemas.modernwpf.com/2019"
-         mc:Ignorable="d" d:DesignHeight="438" d:DesignWidth="700" Title="LogsPage">
+         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ui="http://schemas.modernwpf.com/2019" mc:Ignorable="d" d:DesignHeight="438"
+         d:DesignWidth="700" Title="LogsPage">
     <ui:SimpleStackPanel>
         <Label Content="Logs" Style="{StaticResource PageTitle}"/>
-        <Border Margin="0,9,0,0" Background="{StaticResource BgDarkBrush}" CornerRadius="5">
-            <TextBox x:Name="LogBox" IsReadOnly="True" TextWrapping="Wrap" Style="{StaticResource TextBoxStyle}"
-                     Background="{StaticResource BgDarkBrush}" BorderBrush="{StaticResource BorderBrush}" Text="" Height="340"
+        <Border Margin="0,9,0,0" Background="{StaticResource BgDarkSolid}" CornerRadius="5">
+            <TextBox x:Name="LogBox" Style="{StaticResource TextBoxStyle}" Background="{StaticResource BgDarkSolid}"
+                     BorderBrush="{StaticResource BrBrightSolid}" Height="339" IsReadOnly="True" TextWrapping="Wrap" Text=""
                      VerticalScrollBarVisibility="Hidden" TextChanged="LogBox_TextChanged"/>
         </Border>
-        <Button x:Name="ClearLogsBtn" Width="77" Height="30" Margin="0,5,0,0" Content="Clear" Click="ClearLogsBtn_OnClick"
-                Style="{StaticResource ButtonStyle}"/>
+        <Button x:Name="ClearLogsBtn" Style="{StaticResource ButtonStyle}" Width="77" Height="30" Margin="0,6,0,0" Content="Clear" Click="ClearLogsBtn_OnClick"/>
     </ui:SimpleStackPanel>
 </ui:Page>
