--- a/Pages/ManagePage.xaml
+++ b/Pages/ManagePage.xaml
@@ -1,8 +1,7 @@
 ﻿<ui:Page x:Class="SpicetifyManager.Pages.ManagePage" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ui="http://schemas.modernwpf.com/2019"
-         mc:Ignorable="d" d:DesignHeight="438" d:DesignWidth="700" Title="ManagePage">
+         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ui="http://schemas.modernwpf.com/2019" mc:Ignorable="d" d:DesignHeight="438"
+         d:DesignWidth="700" Title="ManagePage">
     <ui:Page.Resources>
         <Style BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
             <Setter Property="Width" Value="140"/>
@@ -13,8 +12,8 @@
     </ui:Page.Resources>
     <ui:SimpleStackPanel Spacing="11">
         <Label Content="Manage" Style="{StaticResource PageTitle}"/>
-        <ui:DropDownButton x:Name="UpgradeBtn" Width="140" Height="40" Content="Upgrade"
-                           Style="{StaticResource DropDownButtonStyle}" HorizontalContentAlignment="Left" Padding="11,0,9,0">
+        <ui:DropDownButton x:Name="UpgradeBtn" Width="140" Height="40" Content="Upgrade" Style="{StaticResource DropDownButtonStyle}"
+                           HorizontalContentAlignment="Left" Padding="11,0,9,0">
             <ui:DropDownButton.Flyout>
                 <ui:MenuFlyout Placement="TopEdgeAlignedLeft">
                     <MenuItem x:Name="UpgradeOnly" Header="Upgrade Only" Click="UpgradeOnly_OnClick"/>
