--- a/Pages/PluginsPage.xaml
+++ b/Pages/PluginsPage.xaml
@@ -11,8 +11,8 @@
         <Style TargetType="ui:ListView">
             <Setter Property="Width" Value="200"/>
             <Setter Property="Margin" Value="0,7,0,0"/>
-            <Setter Property="Background" Value="{StaticResource BgDarkBrush}"/>
-            <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
+            <Setter Property="Background" Value="{StaticResource BgDarkSolid}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource BrBrightSolid}"/>
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="MaxHeight" Value="320"/>
