--- a/Styles/Brushes.xaml
+++ b/Styles/Brushes.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--Colors-->
     <Color x:Key="Primary">#E8493D</Color>
     <Color x:Key="Secondary">#F79126</Color>
@@ -18,6 +17,6 @@
     </LinearGradientBrush>
     <SolidColorBrush x:Key="PrimarySolid" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondarySolid" Color="{StaticResource Secondary}"/>
-    <SolidColorBrush x:Key="BgDarkBrush" Color="{StaticResource Background}"/>
-    <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BackgroundBright}"/>
+    <SolidColorBrush x:Key="BgDarkSolid" Color="{StaticResource Background}"/>
+    <SolidColorBrush x:Key="BrBrightSolid" Color="{StaticResource BackgroundBright}"/>
 </ResourceDictionary>
