--- a/Pages/LogsPage.xaml
+++ b/Pages/LogsPage.xaml
@@ -6,7 +6,7 @@
         <Label Content="Logs" Style="{StaticResource PageTitle}"/>
         <Border Margin="0,9,0,0" Background="{StaticResource BgDarkSolid}" CornerRadius="5">
             <TextBox x:Name="LogBox" Style="{StaticResource TextBoxStyle}" Background="{StaticResource BgDarkSolid}"
-                     BorderBrush="{StaticResource BrBrightSolid}" Height="339" IsReadOnly="True" TextWrapping="Wrap" Text=""
+                     BorderBrush="{StaticResource BgBrightSolid}" Height="339" IsReadOnly="True" TextWrapping="Wrap" Text=""
                      VerticalScrollBarVisibility="Hidden" TextChanged="LogBox_TextChanged"/>
         </Border>
         <Button x:Name="ClearLogsBtn" Style="{StaticResource ButtonStyle}" Width="77" Height="30" Margin="0,6,0,0" Content="Clear" Click="ClearLogsBtn_OnClick"/>
