--- a/Pages/ManagePage.xaml
+++ b/Pages/ManagePage.xaml
@@ -16,8 +16,15 @@
                            HorizontalContentAlignment="Left" Padding="11,0,9,0">
             <ui:DropDownButton.Flyout>
                 <ui:MenuFlyout Placement="TopEdgeAlignedLeft">
-                    <MenuItem x:Name="UpgradeOnly" Header="Upgrade Only" Click="UpgradeOnly_Click"/>
-                    <MenuItem x:Name="FullUpgrade" Header="Full Upgrade" Click="FullUpgrade_Click"/>
+                    <ui:MenuFlyout.MenuFlyoutPresenterStyle>
+                        <Style TargetType="ui:MenuFlyoutPresenter">
+                            <Setter Property="Background" Value="{StaticResource BgDarkSolid}"/>
+                        </Style>
+                    </ui:MenuFlyout.MenuFlyoutPresenterStyle>
+                    <ui:MenuFlyout.Items>
+                        <MenuItem x:Name="UpgradeOnly" Header="Upgrade Only" Click="UpgradeOnly_Click"/>
+                        <MenuItem x:Name="FullUpgrade" Header="Full Upgrade" Click="FullUpgrade_Click"/>
+                    </ui:MenuFlyout.Items>
                 </ui:MenuFlyout>
             </ui:DropDownButton.Flyout>
         </ui:DropDownButton>
